--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "glm"]
 	path = glm
 	url = https://github.com/g-truc/glm.git
+[submodule "freetype-gl"]
+	path = freetype-gl
+	url = https://github.com/rougier/freetype-gl
